@@ -1,0 +1,15 @@
+# all files in this directory ex this config file are added
+# to the bootloader directory
+
+# archive file name in theme directory
+archive=bootlogo
+
+# setup function name in 'gfxtest' script
+setup=pxelinux
+
+# list of files to remove in bootloader directory
+rm_files="gfxboot.com"
+
+# additional 'gfxboot' args
+args=""
+
