@@ -1,3 +1,6 @@
+29/10/2009:	v4.1.38
+	- extend interface so it works with gfxboot.c32
+
 19/10/2009:	v4.1.37
 	- fix progress indicator for PXE boot
 
